plugins {
  id 'java'
  id 'application'
}

repositories {
  mavenCentral()
}

sourceCompatibility = '11'
targetCompatibility = '11'
version = '1.1.1-SNAPSHOT'

dependencies {
  compile 'ch.qos.logback:logback-classic:1.2.3'
  compile 'net.logstash.logback:logstash-logback-encoder:5.2'
  compile 'org.codehaus.janino:janino:3.0.6'

  compile 'com.typesafe:config:1.3.3'
  compile 'io.prometheus:simpleclient:0.6.0'
  compile 'io.prometheus:simpleclient_httpserver:0.6.0'
  compile 'io.prometheus:simpleclient_hotspot:0.6.0'
  compile 'org.apache.kafka:kafka-clients:2.1.0'
  compile 'org.apache.kafka:kafka_2.12:2.1.0'
  compile 'org.slf4j:slf4j-api:1.7.25'

  implementation 'commons-io:commons-io:2.6'

  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
}

test {
  useJUnitPlatform()
}

task uberJar(type: Jar) {
  appendix = 'uber'

  manifest {
    attributes 'Main-Class': 'me.frmr.kafkahawk.Main'
  }

  from sourceSets.main.output
  from configurations.runtimeClasspath.
                                       findAll { it.name.endsWith('jar') }.
                                       collect { zipTree(it) }
}

mainClassName = "me.frmr.kafkahawk.Main"

tasks.withType(JavaCompile) {
  options.compilerArgs += ['-Xlint:deprecation']
}
